Created Navbar and working on about section

--- a/frontend-next/app/globals.css
+++ b/frontend-next/app/globals.css
@@ -10,8 +10,8 @@
   --border-color: black;
 }
 
-[data-theme='dark'] {
-  --bg-color: black;
+.dark {
+  --bg-color: #1a1a1a;
   --text-color: white;
   --border-color: white;
 }
